# cpp-xml-playground

./: CMakeLists.txt  README.md
tinyxml/: CMakeLists.txt  builder.cpp  messages.h  parser.cpp
